--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://chamikasahan.github.io/nextGen",
+  "homepage": "https://chamikasahan.github.io/nextGenWebsite/",
   "type": "module",
   "scripts": {
     "dev": "vite",
